# foobar

./: CMakeLists.txt  README.md
src/: Buffer.cpp  Buffer.h  Editor.cpp  Editor.h  GapBuffer.cpp  GapBuffer.h  Terminal.cpp  Terminal.h  main.cpp
